force-app/main/default/objects/Product_Category_Map__mdt/Product_Category_Map__mdt.object-meta.xml
<CustomObject>
    <description>Maps product code prefixes (first 3 characters) to display categories. Used by the Product Manager LWC to group products into categories like Space, Power, Cross Connect, etc. Data-driven replacement for hardcoded PREFIX_TO_CATEGORY map.</description>
    <label>Product Category Map</label>
    <pluralLabel>Product Category Maps</pluralLabel>
</CustomObject>