force-app/main/default/objects/Product_Category_Map__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Display category name. E.g., Space, Power, Cross Connect, IP and Internet, Managed Connectivity, Remote Hands, Managed Services, Office Services, Professional Services.</description>
    <label>Category</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>