force-app/main/default/objects/Product_Category_Map__mdt/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <description>Product code prefix (first 3 characters, uppercase). E.g., CAB, POW, CCL, IPT.</description>
    <label>Prefix</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>